fixed transform for modal, added flex for btn and z-index for icon-close

--- a/src/sass/components/_modal-about.scss
+++ b/src/sass/components/_modal-about.scss
@@ -14,7 +14,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   background-color: var(--secondary-bg-color);
   width: calc(100% - 20px);
   height: 550px;
@@ -24,7 +24,7 @@
   padding: 40px;
   transition: transform 250ms var(--typical-time-function);
   .about-backdrop.is-hidden & {
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0);
   }
   @include mobile {
     width: 450px;
@@ -42,6 +42,7 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   top: 8px;
   right: 8px;
+  display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--secondary-accent-color);
@@ -61,6 +62,7 @@
 .icon-close {
   fill: currentColor;
   transition: fill 250ms var(--typical-time-function);
+  z-index: 1000;
 }
 .about-modal__title {
   color: var(--pimary-accent-color);
